enable logging level
Signed-off-by: dk77.yun <dk77.yun@samsung.com>

--- a/native_template/build.gradle
+++ b/native_template/build.gradle
@@ -14,12 +14,14 @@ apply plugin: "tizen"
 
 tizen {
 
+    logLevel = 1;
+
     sdk {
         sdkPath = "/home/dkyun77/tizen-sdk_tizen_sdk";
     }
 
     app {
-        type = "native"
+        type = "native";
         platform = "mobile-2.4";
     }
 
