update plugin group/name from org.tizen.plugin to gradle-tizen-plugin
Signed-off-by: dk77.yun <dk77.yun@samsung.com>

--- a/native_template/build.gradle
+++ b/native_template/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath "org.:org.tizen.gradle:1.0"
+        classpath group: 'gradle-tizen-plugin', name: 'gradle-tizen-plugin', version: '1.0'
     }
 }
 
