--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: "groovy"
 apply plugin: "maven"
 
-group = "org.tizen"
+group = "gradle-tizen-plugin"
 version = "1.0"
 
 repositories {
